cmake_minimum_required(VERSION 3.21)
project(Cpractice C)

set(CMAKE_C_STANDARD 99)

add_executable(Cpractice
#        book/chap08/BinaryTree/BinaryTree.h
#        book/chap08/BinaryTree/BinaryTree.c
#        book/chap08/BinaryTree/BinaryTreeMain.c

#        book/chap08/BinaryTree2/BinaryTree2.h
#        book/chap08/BinaryTree2/BinaryTree2.c
#        book/chap08/BinaryTree2/BinaryTree2Main.c

        book/chap08/Problem08-1/BinaryTree2.h
        book/chap08/Problem08-1/BinaryTree2.c
        book/chap08/Problem08-1/BinaryTree2Main.c
        )
